==> apache/nuttx/arch/arm/src/lpc43xx/lpc43_i2c.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <stdlib.h>
#include <string.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/arch.h>
#include <nuttx/wdog.h>
#include <nuttx/mutex.h>
#include <nuttx/semaphore.h>
#include <nuttx/i2c/i2c_master.h>
#include <nuttx/irq.h>
#include <arch/board/board.h>
#include "chip.h"
#include "arm_internal.h"
#include "lpc43_i2c.h"
#include "lpc43_scu.h"
#include "lpc43_ccu.h"
#include "lpc43_pinconfig.h"
#define I2C_TIMEOUT  (20*1000/CONFIG_USEC_PER_TICK) /* 20 mS */
#  define I2C0_DEFAULT_FREQUENCY 1000000
#  define I2C0_DEFAULT_FREQUENCY 400000
#define I2C1_DEFAULT_FREQUENCY 400000

static void lpc43_i2c_setfrequency(struct lpc43_i2cdev_s *priv,
                                   uint32_t frequency)
{
  if (frequency != priv->frequency)
    {
      if (frequency > 100000)
        {
          /* asymmetric per 400Khz I2C spec */

          putreg32(priv->base_freq / (83 + 47) * 47 / frequency,
                   priv->base + LPC43_I2C_SCLH_OFFSET);
          putreg32(priv->base_freq / (83 + 47) * 83 / frequency,
                   priv->base + LPC43_I2C_SCLL_OFFSET);
        }
      else
        {
          /* 50/50 mark space ratio */

          putreg32(priv->base_freq / 100 * 50 / frequency,
                   priv->base + LPC43_I2C_SCLH_OFFSET);
          putreg32(priv->base_freq / 100 * 50 / frequency,
                   priv->base + LPC43_I2C_SCLL_OFFSET);
        }

      priv->frequency =  frequency;
    }
}

static void lpc43_i2c_timeout(wdparm_t arg)
{
  struct lpc43_i2cdev_s *priv = (struct lpc43_i2cdev_s *)arg;

  irqstate_t flags = enter_critical_section();
  priv->state = 0xff;
  nxsem_post(&priv->wait);
  leave_critical_section(flags);
}

static int lpc43_i2c_interrupt(int irq, void *context, void *arg)
{
  struct lpc43_i2cdev_s *priv = (struct lpc43_i2cdev_s *)arg;
  struct i2c_msg_s *msg;
  uint32_t state;

  DEBUGASSERT(priv != NULL);

  /* Reference UM10360 19.10.5 */

  state = getreg32(priv->base + LPC43_I2C_STAT_OFFSET);
  msg  = priv->msgs;

  priv->state = state;
  state &= 0xf8;  /* state mask, only 0xX8 is possible */
  switch (state)
    {
    case 0x08:    /* A START condition has been transmitted. */
    case 0x10:    /* A Repeated START condition has been transmitted. */

      /* Set address */

      putreg32(((I2C_M_READ & msg->flags) == I2C_M_READ) ?
        I2C_READADDR8(msg->addr) :
        I2C_WRITEADDR8(msg->addr), priv->base + LPC43_I2C_DAT_OFFSET);

      /* Clear start bit */

      putreg32(I2C_CONCLR_STAC, priv->base + LPC43_I2C_CONCLR_OFFSET);
      break;

    /* Write cases */

    case 0x18: /* SLA+W has been transmitted; ACK has been received  */
      priv->wrcnt = 0;
      putreg32(msg->buffer[0], priv->base + LPC43_I2C_DAT_OFFSET); /* put first byte */
      break;

    case 0x28: /* Data byte in DAT has been transmitted; ACK has been received. */
      priv->wrcnt++;

      if (priv->wrcnt < msg->length)
        {
          putreg32(msg->buffer[priv->wrcnt], priv->base + LPC43_I2C_DAT_OFFSET); /* Put next byte */
        }
      else
        {
          lpc32_i2c_nextmsg(priv);
        }
      break;

    /* Read cases */

    case 0x40:  /* SLA+R has been transmitted; ACK has been received */
      priv->rdcnt = 0;
      if (msg->length > 1)
        {
          putreg32(I2C_CONSET_AA, priv->base + LPC43_I2C_CONSET_OFFSET); /* Set ACK next read */
        }
      else
        {
          putreg32(I2C_CONCLR_AAC, priv->base + LPC43_I2C_CONCLR_OFFSET);  /* Do not ACK because only one byte */
        }
      break;

    case 0x50:  /* Data byte has been received; ACK has been returned. */
      priv->rdcnt++;
      msg->buffer[priv->rdcnt - 1] =
        getreg32(priv->base + LPC43_I2C_BUFR_OFFSET);

      if (priv->rdcnt >= (msg->length - 1))
        {
          putreg32(I2C_CONCLR_AAC, priv->base + LPC43_I2C_CONCLR_OFFSET);  /* Do not ACK any more */
        }
      break;

    case 0x58:  /* Data byte has been received; NACK has been returned. */
      msg->buffer[priv->rdcnt] =
        getreg32(priv->base + LPC43_I2C_BUFR_OFFSET);
      lpc32_i2c_nextmsg(priv);
      break;

    default:
      lpc43_i2c_stop(priv);
      break;
    }

  putreg32(I2C_CONCLR_SIC, priv->base + LPC43_I2C_CONCLR_OFFSET); /* clear interrupt */

  return OK;
}

static int lpc43_i2c_transfer(struct i2c_master_s *dev,
                              struct i2c_msg_s *msgs, int count)
{
  struct lpc43_i2cdev_s *priv = (struct lpc43_i2cdev_s *)dev;
  int ret;

  DEBUGASSERT(dev != NULL);

  /* Get exclusive access to the I2C bus */

  nxmutex_lock(&priv->lock);

  /* Set up for the transfer */

  priv->wrcnt = 0;
  priv->rdcnt = 0;
  priv->msgs  = msgs;
  priv->nmsg  = count;

  /* Configure the I2C frequency.
   * REVISIT: Note that the frequency is set only on the first message.
   * This could be extended to support different transfer frequencies for
   * each message segment.
   */

  lpc43_i2c_setfrequency(priv, msgs->frequency);

  /* Perform the transfer */

  ret = lpc43_i2c_start(priv);

  nxmutex_unlock(&priv->lock);
  return ret;
}

struct i2c_master_s *lpc43_i2cbus_initialize(int port)
{
  struct lpc43_i2cdev_s *priv;

  if (port > 1)
    {
      i2cerr("ERROR: lpc I2C only supports ports 0 and 1\n");
      return NULL;
    }

  irqstate_t flags;
  uint32_t regval;

  flags = enter_critical_section();

#ifdef CONFIG_LPC43_I2C0
  if (port == 0)
    {
      priv           = &g_i2c0dev;
      priv->base     = LPC43_I2C0_BASE;
      priv->irqid    = LPC43M4_IRQ_I2C0;
      priv->base_freq = BOARD_ABP1_FREQUENCY;

      /* Enable, set mode */

      regval  = getreg32(LPC43_SCU_SFSI2C0);
      regval |= SCU_SFSI2C0_SCL_EZI | SCU_SFSI2C0_SDA_EZI;

#ifdef CONFIG_LPC43_I2C0_SUPERFAST
      /* Enable super fast mode */

      regval |= SCU_SFSI2C0_SCL_EHD | SCU_SFSI2C0_SDA_EHD;
#endif

      putreg32(regval, LPC43_SCU_SFSI2C0);

      /* Enable clock */

      regval  = getreg32(LPC43_CCU1_APB1_I2C0_CFG);
      regval |= CCU_CLK_CFG_RUN;
      putreg32(regval, LPC43_CCU1_APB1_I2C0_CFG);

      lpc43_i2c_setfrequency(priv, I2C0_DEFAULT_FREQUENCY);

      /* No pin configuration needed */
    }
  else
#endif
#ifdef CONFIG_LPC43_I2C1
  if (port == 1)
    {
      priv        = &g_i2c1dev;
      priv->base  = LPC43_I2C1_BASE;
      priv->irqid = LPC43M4_IRQ_I2C1;
      priv->base_freq = BOARD_ABP3_FREQUENCY;

      /* No need to enable */

      /* Enable clock */

      regval  = getreg32(LPC43_CCU1_APB3_I2C1_CFG);
      regval |= CCU_CLK_CFG_RUN;
      putreg32(regval, LPC43_CCU1_APB3_I2C1_CFG);

      /* Pin configuration */

      lpc43_pin_config(PINCONF_I2C1_SCL);
      lpc43_pin_config(PINCONF_I2C1_SDA);

      lpc43_i2c_setfrequency(priv, I2C1_DEFAULT_FREQUENCY);
    }
  else
#endif
    {
      leave_critical_section(flags);
      return NULL;
    }

  leave_critical_section(flags);

  putreg32(I2C_CONSET_I2EN, priv->base + LPC43_I2C_CONSET_OFFSET);

  /* Initialize mutex & semaphores */

  nxmutex_init(&priv->lock);
  nxsem_init(&priv->wait, 0, 0);

  /* Attach Interrupt Handler */

  irq_attach(priv->irqid, lpc43_i2c_interrupt, priv);

  /* Enable Interrupt Handler */

  up_enable_irq(priv->irqid);

  /* Install our operations */

  priv->dev.ops = &lpc43_i2c_ops;
  return &priv->dev;
}

int lpc43_i2cbus_uninitialize(struct i2c_master_s * dev)
{
  struct lpc43_i2cdev_s *priv = (struct lpc43_i2cdev_s *) dev;

  putreg32(I2C_CONCLRT_I2ENC, priv->base + LPC43_I2C_CONCLR_OFFSET);
  up_disable_irq(priv->irqid);
  irq_detach(priv->irqid);
  return OK;
}
